# apinfer

./: .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  main.py  pyproject.toml
apinfer/: __init__.py
apinfer/core/: capture.py  detector.py  inferrer.py  models.py  storage.py
apinfer/output/: cli.py
apinfer/transport/: __init__.py  asgi.py
