[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "apinfer"
description = "Infer your real API schema from live traffic — not from docs you forgot to update"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Core inference
    "genson>=1.3.0", # JSON Schema inference from example payloads
    "deepdiff>=8.1.0", # Schema snapshot comparison
    # Storage
    "sqlite-utils>=3.38", # Ergonomic SQLite wrapper (no ORM overhead)
    # CLI & output
    "typer>=0.15.0", # CLI framework (argparse replacement)
    "rich>=13.9.0", # Terminal formatting, tables, diffs
    # Data modeling
    "pydantic>=2.10.0", # Internal dataclasses with validation
    # Async compatibility
    "anyio>=4.7.0", # Unified async backend (asyncio / trio)
]
dynamic = [
    "version"
]

[project.optional-dependencies]
spec = [
    "jsonschema>=4.23.0", # OpenAPI response validation (spec-aware mode)
    "pyyaml>=6.0.2", # Parse OpenAPI YAML files
]

[project.scripts]
apinfer = "apinfer.output.cli:app"

[tool.hatch.version]
path = "apinfer/__init__.py"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pre-commit>=4.0.0",
    "ruff>=0.15.7",
]

[tool.ruff]
target-version = "py311"
line-length = 88
src = ["apinfer"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "C4", "SIM", "TCH", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["apinfer"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
docstring-code-format = true

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["genson.*", "deepdiff.*", "sqlite_utils.*"]
ignore_missing_imports = true
